--- a/Frontend/src/app/admin/admin-home/admin-home.component.html
+++ b/Frontend/src/app/admin/admin-home/admin-home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-3">
-        <div class="row">
+        <div class="row m-md-5">
             <div class="col-12">
-                <div class="nav  flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <div class="nav sidebar flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <!-- <a class="nav-link mb-2 py-3" id="v-pills-bookings-tab" data-toggle="pill" [routerLink]="['bookings']" routerLinkActive="active" role="tab" aria-controls="v-pills-bookings" aria-selected="true">Bookings</a> -->
                     <a class="nav-link mb-2 py-3" id="v-pills-home-tab" data-toggle="pill" [routerLink]="['requests']" routerLinkActive="active" role="tab" aria-controls="v-pills-home" aria-selected="true">Requests</a>
                     <a class="nav-link mb-2 py-3" id="v-pills-search" data-toggle="pill" [routerLink]="['search']" routerLinkActive="active" role="tab" aria-controls="v-pills-search" aria-selected="false">Search Alumni</a>
