--- a/Frontend/src/app/alumni/login/login.component.css
+++ b/Frontend/src/app/alumni/login/login.component.css
@@ -2,6 +2,13 @@
     color: #005D63;
 }
 
+.bg {
+    min-height: 100vh;
+    overflow-x: auto !important;
+    background: white;
+    background: linear-gradient(180deg, white 0%, rgba(220, 253, 255, 1) 100%);
+}
+
 .card-shadow {
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .1);
 }
