--- a/Frontend/src/app/shared/events/events.component.html
+++ b/Frontend/src/app/shared/events/events.component.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <!--Text-->
-                <div class="m-3">
+                <div class="m-3 e-desc">
                     {{event.eDiscription}}
                 </div>
 
