--- a/Frontend/src/app/shared/search-alumni/search-alumni.component.css
+++ b/Frontend/src/app/shared/search-alumni/search-alumni.component.css
@@ -1,5 +1,4 @@
-.m-btn {
+/* .m-btn {
     font-size: 0.9em !important;
     text-transform: initial;
-    /* font-weight: 500 !important; */
-}
+} */
