--- a/Frontend/src/app/shared/alumni-profile/alumni-profile.component.css
+++ b/Frontend/src/app/shared/alumni-profile/alumni-profile.component.css
@@ -5,12 +5,36 @@
 
 .bg {
     overflow-x: auto !important;
-    background: white;
-    background: linear-gradient(180deg, white 0%, rgba(220, 253, 255, 1) 100%);
+    /* background: white;
+    background: linear-gradient(180deg, white 0%, rgba(220, 253, 255, 1) 100%); */
 }
 
 .container {
     min-height: 100vh;
+}
+
+p {
+    font-size: 1.25em;
+    font-weight: 400;
+    /* color: #676767; */
+}
+
+.exp {
+    border-left: solid #005D63 1px;
+}
+
+.exp div {
+    font-size: 1.3em;
+    font-weight: 400;
+}
+
+h1 {
+    font-weight: 600;
+}
+
+h2 {
+    font-weight: 300;
+    /* color: #005D63; */
 }
 
 
