--- a/Frontend/src/app/shared/home/home.component.html
+++ b/Frontend/src/app/shared/home/home.component.html
@@ -1,4 +1,3 @@
-Welcome!
 <!-- <mdb-card style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/Others/gradient1.jpg')">
     <div class="text-white text-center py-5 px-4 my-5">
       <div>
@@ -14,9 +13,10 @@ Welcome!
     <div class="row">
         <div class="col-12 col-md-6">
             <h1>Blogs</h1>
-            <div><a routerLink='/blogs' routerLinkActive="router-link-active">View All</a></div>
-            <section *ngFor="let blog of allblogs | slice:0:3; let i=index">
-                <div class="mini br-5  row m-4">
+            <div><a *ngIf="!getrole()" routerLink='/blogs' routerLinkActive="router-link-active">View All</a></div>
+            <div><a *ngIf="getrole()" routerLink='/admin/blogs' routerLinkActive="router-link-active">View All</a></div>
+            <section *ngFor="let blog of allblogs.slice().reverse() | slice:0:3; let i=index">
+                <div class="mini br-5  row m-4 blog-size" *ngIf="blog.imageURL">
 
                     <div class="col-3">
                         <img class="my-4 b-pic" src="{{blog.imageURL}}" alt="">
@@ -24,9 +24,20 @@ Welcome!
                     </div>
                     <div class="col-9">
                         <h4 class="mb-1 dgreen-text">{{blog.tblog}}</h4>
-                        <div>By {{blog.fname}}</div>
+                        <div>By {{blog.fname}} {{blog.lname}}</div>
                         <div class="blog-starts my-3">
-                            {{blog.blog}}
+                            <p>{{blog.blog}}</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="mini br-5  row m-4 blog-size" *ngIf="!blog.imageURL">
+                    <div class="col-12">
+                        <h4 class="mb-1 dgreen-text">{{blog.tblog}}</h4>
+                        <div>By {{blog.fname}} {{blog.lname}}</div>
+                        <div class="blog-starts my-3">
+                            <p>{{blog.blog}}</p>
                         </div>
                     </div>
 
@@ -38,11 +49,16 @@ Welcome!
         </div>
         <div class="col-12 col-md-6">
             <h1>Events</h1>
-            <div><a routerLink='/events' routerLinkActive="router-link-active">View All</a></div>
+            <div><a *ngIf="!getrole()" routerLink='/events' routerLinkActive="router-link-active">View All</a></div>
+            <div><a *ngIf="getrole()" routerLink='/admin/events' routerLinkActive="router-link-active">View All</a></div>
             <section *ngFor="let event of allevents | slice:0:3; let i=index">
-                <div class="mini br-5 row m-4">
-                    <h4 class="mb-1 dgreen-text">{{event.etitle}}</h4>
-                    <div>On {{event.edate.split('T')[0]}}</div>
+                <div class="mini br-5 m-4 p-4">
+                    <div class="d-flex">
+                        <h3 class="dgreen-text">{{event.etitle}}</h3>
+
+                        <div class="ml-auto align-self-center eventd dgreen br-5 px-3 py-1 white-text"> On {{event.edate.split('T')[0]}}</div>
+                    </div>
+
                     <div class="blog-starts my-3">
                         {{event.eDiscription}}
                     </div>
